tests/fixtures/errors/cycle.ksr
// Runtime cycle: a depends on b, b depends on a
param seed: Dimensionless = 1.0;
node a: Dimensionless = @b + 1.0;
node b: Dimensionless = @a + 1.0;
